tools/tests/errors/surf_parse_19.ki
# PARSER: 'continue' used inside a function but outside any loop
var f = Function():
    continue
discard f